# HNN

./: .gitignore  CMakeLists.txt  main.cpp  test.param
common/: CMakeLists.txt
common/include/: common.h  common.hpp
common/include/allocator/: Allocator.h
common/include/core/: CommonFactory.h  DataType.h  ErrorCode.h
common/include/data_manager/: DataManagerBase.h  DataManagerCommon.h  DataManagerRegister.h
common/include/log/: log.h
common/include/tensor/: Tensor.h  TensorBase.h
common/src/: common.cpp
common/src/allocator/: Allocator.cpp
common/src/data_manager/: DataManagerBase.cpp  DataManagerCommon.cpp
common/src/tensor/: Tensor.cpp  TensorBase.cpp
engine/: CMakeLists.txt
engine/include/: Blob.h  Config.h  DataReader.h  Executer.h  Layer.h  ModelBin.h  Net.h  NetBase.h  ParamDict.h
engine/src/: Blob.cpp  Config.cpp  DataReader.cpp  Executer.cpp  Layer.cpp  ModelBin.cpp  Net.cpp  ParamDict.cpp
opencv/cmake/: OpenCVModule.cmake
operator/: CMakeLists.txt
operator/include/: register.h
operator/include/native/: Concat.h  Convolution.h  Dropout.h  Input.h  NativeRegistor.h  Padding.h  Pooling.h  ReLU.h  Softmax.h  Split.h
operator/src/native/: Concat.cpp  Convolution.cpp  Dropout.cpp  Input.cpp  Padding.cpp  Pooling.cpp  ReLU.cpp  Softmax.cpp  Split.cpp
operator/test/: CMakeLists.txt  test_all.cpp  test_op.h
operator/test/MNN/include/MNN/expr/: Expr.hpp
operator/test/naive/: test_convolution.cpp
